# MixtureKit

./: LICENSE  README.md  pyproject.toml  vis.py
MixtureKit/: MoeExperts.py  __init__.py  _bts.py  _btx.py  _traditional.py  utils.py
doc_configuration/: conf.py  index.rst  references.bib
doc_configuration/auto_examples/: example_build_moe.codeobj.json  example_build_moe.py  index.rst  searchindex.dir
docs/doctrees/: api.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
docs/doctrees/auto_examples/: example_build_moe.doctree  index.doctree  sg_execution_times.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
docs/html/_sources/: api.rst.txt  sg_execution_times.rst.txt
docs/html/_sources/auto_examples/: example_build_moe.rst.txt  sg_execution_times.rst.txt
docs/html/_static/: style.css
docs/html/auto_examples/: example_build_moe.html  index.html  sg_execution_times.html
examples/: README_vis.md  config_examples.txt  example_build_moe.py
mixture_training/: config_training.yaml  deepspeed_config.yaml  train_model.py
