[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "MixtureKit"
dynamic = ["version"]
dependencies = [
    "accelerate>=1.9.0",
    "black>=24.10.0",
    "datasets>=4.1.0",
    "deepspeed==0.16.9",
    "huggingface_hub>=0.27.1",
    "tqdm>=4.66.1",
    "torch>=2.5.0",
    "trl==0.19.0",
    "transformers==4.52.4",
    "streamlit"
]
requires-python = ">=3.10"
authors = [{name = "MBZUAI developers"}]
maintainers = [
  {name = "Ahmad Chamma", email = "ahmad.chamma@mbzuai.ac.ae"}
]
description = "Merge pretrained and finetuned models into a unified framework, integrating Mixture-of-Experts"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
# Requirements necessary for building the documentation
doc = [
    "sphinx-bootstrap-theme>=0.8.1",
    "sphinx-gallery>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["MixtureKit"]

[tool.setuptools.packages.find]
where = ["MixtureKit"]

[tool.hatch.version]
source = "vcs"
